@@ -1,13 +1,16 @@
+include $(top_srcdir)/Makefile.decl
+
 NULL =
 
 SUBDIRS = \
 	gee \
+	tests \
 	$(NULL)
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gee-1.0.pc
 
-EXTRA_DIST = \
+EXTRA_DIST += \
 	MAINTAINERS \
 	gee-1.0.pc.in \
 	$(NULL)
